Update to handle mutiple car and add vin