@@ -2,6 +2,7 @@ package com.example.taxcalculator.service;
 
 import com.example.taxcalculator.exception.UnsupportedCityException;
 import com.example.taxcalculator.model.Car;
+import com.example.taxcalculator.model.TaxCalculationRequest;
 import com.example.taxcalculator.model.Vehicle;
 import com.example.taxcalculator.service.calculator.GothenburgCongestionTaxCalculator;
 import org.junit.jupiter.api.BeforeEach;
@@ -11,9 +12,7 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.text.ParseException;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -23,43 +22,83 @@ class CongestionTaxServiceTest {
     @Mock
     private GothenburgCongestionTaxCalculator gothenburgCongestionTaxCalculator;
 
+    @Mock
+    private JsonDataLoader jsonDataLoader;
+
     @InjectMocks
     private CongestionTaxService congestionTaxService;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        congestionTaxService = new CongestionTaxService(gothenburgCongestionTaxCalculator);
+        congestionTaxService = new CongestionTaxService(gothenburgCongestionTaxCalculator, jsonDataLoader);
     }
 
     @Test
-    void calculateTax_validCity_returnsTax() throws ParseException {
-        String city = "Gothenburg";
-        Vehicle vehicle = new Car();
-        List<String> timestamps = Arrays.asList("2013-02-08 06:27:00", "2013-02-08 06:20:27");
+    void calculateTaxes_validCityNonExemptedVehicle_returnsTax() throws ParseException {
+        TaxCalculationRequest request = new TaxCalculationRequest();
+        request.setCity("Gothenburg");
+        Vehicle vehicle = new Car("1HGCM82633A654321");
+        request.setVehicle(vehicle);
+        request.setTimestamps(List.of("2013-02-08 06:27:00", "2013-02-08 06:20:27"));
 
-        when(gothenburgCongestionTaxCalculator.calculateDailyTax(anyList(), any(Vehicle.class)))
-                .thenReturn(Map.of("2013-02-08", 13));
+        List<String> exemptedVehicles = new ArrayList<>();
+        when(jsonDataLoader.getExemptedVehiclesForCity("Gothenburg")).thenReturn(exemptedVehicles);
+        Map<String, Integer> taxResults = Map.of("2013-02-08", 26);
+        when(gothenburgCongestionTaxCalculator.calculateDailyTax(anyList(), any(Vehicle.class))).thenReturn(taxResults);
 
-        Map<String, Integer> result = congestionTaxService.calculateTax(city, vehicle, timestamps);
+        List<Map<String, Object>> result = congestionTaxService.calculateTaxes(List.of(request));
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(13, result.get("2013-02-08"));
+        Map<String, Object> response = result.get(0);
+        assertEquals("1HGCM82633A654321", response.get("vin"));
+        assertEquals(false, response.get("exempted"));
+        assertEquals(taxResults, response.get("taxResults"));
 
+        verify(jsonDataLoader, times(1)).getExemptedVehiclesForCity("Gothenburg");
         verify(gothenburgCongestionTaxCalculator, times(1)).calculateDailyTax(anyList(), any(Vehicle.class));
     }
 
     @Test
-    void calculateTax_invalidCity_throwsException() {
-        String city = "InvalidCity";
-        Vehicle vehicle = new Car();
-        List<String> timestamps = Arrays.asList("2013-02-08 06:27:00", "2013-02-08 06:20:27");
+    void calculateTaxes_validCityExemptedVehicle_returnsExempted() throws ParseException {
+        TaxCalculationRequest request = new TaxCalculationRequest();
+        request.setCity("Gothenburg");
+        Vehicle vehicle = new Car("1HGCM82633A654321");
+        request.setVehicle(vehicle);
+        request.setTimestamps(List.of("2013-02-08 06:27:00", "2013-02-08 06:20:27"));
+
+        List<String> exemptedVehicles = List.of("CAR");
+        when(jsonDataLoader.getExemptedVehiclesForCity("Gothenburg")).thenReturn(exemptedVehicles);
+
+        List<Map<String, Object>> result = congestionTaxService.calculateTaxes(List.of(request));
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        Map<String, Object> response = result.get(0);
+        assertEquals("1HGCM82633A654321", response.get("vin"));
+        assertEquals(true, response.get("exempted"));
+        assertTrue(((Map<?, ?>) response.get("taxResults")).isEmpty());
+
+        verify(jsonDataLoader, times(1)).getExemptedVehiclesForCity("Gothenburg");
+        verify(gothenburgCongestionTaxCalculator, times(0)).calculateDailyTax(anyList(), any(Vehicle.class));
+    }
+
+    @Test
+    void calculateTaxes_invalidCity_throwsException() throws ParseException {
+        TaxCalculationRequest request = new TaxCalculationRequest();
+        request.setCity("InvalidCity");
+        Vehicle vehicle = new Car("1HGCM82633A654321");
+        request.setVehicle(vehicle);
+        request.setTimestamps(List.of("2013-02-08 06:27:00", "2013-02-08 06:20:27"));
 
         UnsupportedCityException exception = assertThrows(UnsupportedCityException.class, () -> {
-            congestionTaxService.calculateTax(city, vehicle, timestamps);
+            congestionTaxService.calculateTaxes(List.of(request));
         });
 
         assertEquals("No tax calculator found for city: InvalidCity", exception.getMessage());
+
+        verify(jsonDataLoader, times(0)).getExemptedVehiclesForCity(anyString());
+        verify(gothenburgCongestionTaxCalculator, times(0)).calculateDailyTax(anyList(), any(Vehicle.class));
     }
 }
